--- a/en/index.html
+++ b/en/index.html
@@ -10,19 +10,19 @@
 
 <meta name="description" content="Guangdong Gaozhou Senior High School Computer Society Official">
 <meta name="author" content="Guangdong Gaozhou Senior High School Computer Society">
-<link rel="canonical" href="https://idk.com/en/">
+<link rel="canonical" href="https://ggcso.github.io/en/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.4599eadb9eb2ad3d0a8d6827b41a8fda8f2f4af226b63466c09c5fddbc8706b7.css" integrity="sha256-RZnq256yrT0KjWgntBqP2o8vSvImtjRmwJxf3byHBrc=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://idk.com/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://idk.com/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://idk.com/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://idk.com/apple-touch-icon.png">
-<link rel="mask-icon" href="https://idk.com/safari-pinned-tab.svg">
+<link rel="icon" href="https://ggcso.github.io/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://ggcso.github.io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://ggcso.github.io/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://ggcso.github.io/apple-touch-icon.png">
+<link rel="mask-icon" href="https://ggcso.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://idk.com/en/index.xml">
-<link rel="alternate" type="application/json" href="https://idk.com/en/index.json">
-<link rel="alternate" hreflang="en" href="https://idk.com/en/">
-<link rel="alternate" hreflang="zh" href="https://idk.com/zh/">
+<link rel="alternate" type="application/rss+xml" href="https://ggcso.github.io/en/index.xml">
+<link rel="alternate" type="application/json" href="https://ggcso.github.io/en/index.json">
+<link rel="alternate" hreflang="en" href="https://ggcso.github.io/en/">
+<link rel="alternate" hreflang="zh" href="https://ggcso.github.io/zh/">
 <noscript>
     <style>
         #theme-toggle,
@@ -65,7 +65,7 @@
 <meta property="og:title" content="Guangdong Gaozhou Senior High School Computer Society Official" />
 <meta property="og:description" content="Guangdong Gaozhou Senior High School Computer Society Official" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://idk.com/en/" />
+<meta property="og:url" content="https://ggcso.github.io/en/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Guangdong Gaozhou Senior High School Computer Society Official"/>
@@ -76,9 +76,9 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "Guangdong Gaozhou Senior High School Computer Society Official",
-  "url": "https://idk.com/en/",
+  "url": "https://ggcso.github.io/en/",
   "description": "Guangdong Gaozhou Senior High School Computer Society Official",
-  "thumbnailUrl": "https://idk.com/favicon.ico",
+  "thumbnailUrl": "https://ggcso.github.io/favicon.ico",
   "sameAs": [
       "https://github.com/ggcomsoc", "https://space.bilibili.com/455517331"
   ]
@@ -101,7 +101,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://idk.com/en/" accesskey="h" title="Guangdong Gaozhou Senior High School Computer Society Official (Alt + H)">Guangdong Gaozhou Senior High School Computer Society Official</a>
+            <a href="https://ggcso.github.io/en/" accesskey="h" title="Guangdong Gaozhou Senior High School Computer Society Official (Alt + H)">Guangdong Gaozhou Senior High School Computer Society Official</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -125,7 +125,7 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="https://idk.com/zh/" title="简体中文"
+                        <a href="https://ggcso.github.io/zh/" title="简体中文"
                             aria-label="简体中文">简体中文</a>
                     </li>
                 </ul>
@@ -133,17 +133,17 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://idk.com/en/archives" title="Archive">
+                <a href="https://ggcso.github.io/en/archives" title="Archive">
                     <span>Archive</span>
                 </a>
             </li>
             <li>
-                <a href="https://idk.com/en/search/" title="Search">
+                <a href="https://ggcso.github.io/en/search/" title="Search">
                     <span>Search</span>
                 </a>
             </li>
             <li>
-                <a href="https://idk.com/en/tags/" title="Tags">
+                <a href="https://ggcso.github.io/en/tags/" title="Tags">
                     <span>Tags</span>
                 </a>
             </li>
