--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="zh">
   <head>
-    <title>https://idk.com/zh/</title>
-    <link rel="canonical" href="https://idk.com/zh/">
+    <title>https://ggcso.github.io/zh/</title>
+    <link rel="canonical" href="https://ggcso.github.io/zh/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://idk.com/zh/">
+    <meta http-equiv="refresh" content="0; url=https://ggcso.github.io/zh/">
   </head>
 </html>
