--- a/zh/index.html
+++ b/zh/index.html
@@ -10,19 +10,19 @@
 
 <meta name="description" content="Guangdong Gaozhou Senior High School Computer Society Official">
 <meta name="author" content="Guangdong Gaozhou Senior High School Computer Society">
-<link rel="canonical" href="https://idk.com/zh/">
+<link rel="canonical" href="https://ggcso.github.io/zh/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.4599eadb9eb2ad3d0a8d6827b41a8fda8f2f4af226b63466c09c5fddbc8706b7.css" integrity="sha256-RZnq256yrT0KjWgntBqP2o8vSvImtjRmwJxf3byHBrc=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://idk.com/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://idk.com/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://idk.com/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://idk.com/apple-touch-icon.png">
-<link rel="mask-icon" href="https://idk.com/safari-pinned-tab.svg">
+<link rel="icon" href="https://ggcso.github.io/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://ggcso.github.io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://ggcso.github.io/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://ggcso.github.io/apple-touch-icon.png">
+<link rel="mask-icon" href="https://ggcso.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://idk.com/zh/index.xml">
-<link rel="alternate" type="application/json" href="https://idk.com/zh/index.json">
-<link rel="alternate" hreflang="en" href="https://idk.com/en/">
-<link rel="alternate" hreflang="zh" href="https://idk.com/zh/">
+<link rel="alternate" type="application/rss+xml" href="https://ggcso.github.io/zh/index.xml">
+<link rel="alternate" type="application/json" href="https://ggcso.github.io/zh/index.json">
+<link rel="alternate" hreflang="en" href="https://ggcso.github.io/en/">
+<link rel="alternate" hreflang="zh" href="https://ggcso.github.io/zh/">
 <noscript>
     <style>
         #theme-toggle,
@@ -65,7 +65,7 @@
 <meta property="og:title" content="广东高州中学电脑协会官方网站" />
 <meta property="og:description" content="Guangdong Gaozhou Senior High School Computer Society Official" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://idk.com/zh/" />
+<meta property="og:url" content="https://ggcso.github.io/zh/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="广东高州中学电脑协会官方网站"/>
@@ -76,9 +76,9 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "广东高州中学电脑协会官方网站",
-  "url": "https://idk.com/zh/",
+  "url": "https://ggcso.github.io/zh/",
   "description": "Guangdong Gaozhou Senior High School Computer Society Official",
-  "thumbnailUrl": "https://idk.com/favicon.ico",
+  "thumbnailUrl": "https://ggcso.github.io/favicon.ico",
   "sameAs": [
       "https://github.com/ggcomsoc", "https://space.bilibili.com/455517331"
   ]
@@ -101,7 +101,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://idk.com/zh/" accesskey="h" title="广东高州中学电脑协会官方网站 (Alt + H)">广东高州中学电脑协会官方网站</a>
+            <a href="https://ggcso.github.io/zh/" accesskey="h" title="广东高州中学电脑协会官方网站 (Alt + H)">广东高州中学电脑协会官方网站</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -125,7 +125,7 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="https://idk.com/en/" title="English"
+                        <a href="https://ggcso.github.io/en/" title="English"
                             aria-label="English">English</a>
                     </li>
                 </ul>
@@ -133,22 +133,22 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://idk.com/zh/%E5%BD%92%E6%A1%A3" title="归档">
+                <a href="https://ggcso.github.io/zh/%E5%BD%92%E6%A1%A3" title="归档">
                     <span>归档</span>
                 </a>
             </li>
             <li>
-                <a href="https://idk.com/zh/%E5%85%B3%E9%94%AE%E5%AD%97/" title="关键字">
+                <a href="https://ggcso.github.io/zh/%E5%85%B3%E9%94%AE%E5%AD%97/" title="关键字">
                     <span>关键字</span>
                 </a>
             </li>
             <li>
-                <a href="https://idk.com/zh/search/" title="搜索">
+                <a href="https://ggcso.github.io/zh/search/" title="搜索">
                     <span>搜索</span>
                 </a>
             </li>
             <li>
-                <a href="https://idk.com/zh/%E7%B3%BB%E5%88%97/" title="系列">
+                <a href="https://ggcso.github.io/zh/%E7%B3%BB%E5%88%97/" title="系列">
                     <span>系列</span>
                 </a>
             </li>
