--- a/zh/search/index.html
+++ b/zh/search/index.html
@@ -9,17 +9,17 @@
 <meta name="keywords" content="">
 <meta name="description" content="搜索 - 广东高州中学电脑协会官方网站">
 <meta name="author" content="Guangdong Gaozhou Senior High School Computer Society">
-<link rel="canonical" href="https://idk.com/zh/search/">
+<link rel="canonical" href="https://ggcso.github.io/zh/search/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.4599eadb9eb2ad3d0a8d6827b41a8fda8f2f4af226b63466c09c5fddbc8706b7.css" integrity="sha256-RZnq256yrT0KjWgntBqP2o8vSvImtjRmwJxf3byHBrc=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
 <script defer crossorigin="anonymous" src="/assets/js/search.d1362ec293cf71afa4ec91a3127b0e980d0376c9ae5046ec08f7b326b3f62e50.js" integrity="sha256-0TYuwpPPca&#43;k7JGjEnsOmA0DdsmuUEbsCPezJrP2LlA="></script>
-<link rel="icon" href="https://idk.com/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://idk.com/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://idk.com/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://idk.com/apple-touch-icon.png">
-<link rel="mask-icon" href="https://idk.com/safari-pinned-tab.svg">
+<link rel="icon" href="https://ggcso.github.io/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://ggcso.github.io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://ggcso.github.io/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://ggcso.github.io/apple-touch-icon.png">
+<link rel="mask-icon" href="https://ggcso.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="zh" href="https://idk.com/zh/search/">
+<link rel="alternate" hreflang="zh" href="https://ggcso.github.io/zh/search/">
 <noscript>
     <style>
         #theme-toggle,
@@ -62,7 +62,7 @@
 <meta property="og:title" content="搜索" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://idk.com/zh/search/" /><meta property="article:section" content="" />
+<meta property="og:url" content="https://ggcso.github.io/zh/search/" /><meta property="article:section" content="" />
 
 
 
@@ -80,7 +80,7 @@
       "@type": "ListItem",
       "position":  1 ,
       "name": "搜索",
-      "item": "https://idk.com/zh/search/"
+      "item": "https://ggcso.github.io/zh/search/"
     }
   ]
 }
@@ -106,14 +106,14 @@
   },
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "https://idk.com/zh/search/"
+    "@id": "https://ggcso.github.io/zh/search/"
   },
   "publisher": {
     "@type": "Organization",
     "name": "广东高州中学电脑协会官方网站",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://idk.com/favicon.ico"
+      "url": "https://ggcso.github.io/favicon.ico"
     }
   }
 }
@@ -135,7 +135,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://idk.com/zh/" accesskey="h" title="广东高州中学电脑协会官方网站 (Alt + H)">广东高州中学电脑协会官方网站</a>
+            <a href="https://ggcso.github.io/zh/" accesskey="h" title="广东高州中学电脑协会官方网站 (Alt + H)">广东高州中学电脑协会官方网站</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -159,7 +159,7 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="https://idk.com/en/" title="English"
+                        <a href="https://ggcso.github.io/en/" title="English"
                             aria-label="English">English</a>
                     </li>
                 </ul>
@@ -167,22 +167,22 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://idk.com/zh/%E5%BD%92%E6%A1%A3" title="归档">
+                <a href="https://ggcso.github.io/zh/%E5%BD%92%E6%A1%A3" title="归档">
                     <span>归档</span>
                 </a>
             </li>
             <li>
-                <a href="https://idk.com/zh/%E5%85%B3%E9%94%AE%E5%AD%97/" title="关键字">
+                <a href="https://ggcso.github.io/zh/%E5%85%B3%E9%94%AE%E5%AD%97/" title="关键字">
                     <span>关键字</span>
                 </a>
             </li>
             <li>
-                <a href="https://idk.com/zh/search/" title="搜索">
+                <a href="https://ggcso.github.io/zh/search/" title="搜索">
                     <span class="active">搜索</span>
                 </a>
             </li>
             <li>
-                <a href="https://idk.com/zh/%E7%B3%BB%E5%88%97/" title="系列">
+                <a href="https://ggcso.github.io/zh/%E7%B3%BB%E5%88%97/" title="系列">
                     <span>系列</span>
                 </a>
             </li>
