--- a/zh/index.html
+++ b/zh/index.html
@@ -80,7 +80,7 @@
   "description": "Guangdong Gaozhou Senior High School Computer Society Official",
   "thumbnailUrl": "https://ggcso.github.io/favicon.ico",
   "sameAs": [
-      "https://github.com/ggcomsoc", "https://space.bilibili.com/455517331"
+      "https://github.com/ggcso", "https://space.bilibili.com/455517331"
   ]
 }
 </script>
@@ -161,7 +161,7 @@
             height="150" width="150" />
         <h1>广东高州中学电脑协会</h1>
         <span>别无长物，安贫乐道</span><div class="social-icons" >
-    <a href="https://github.com/ggcomsoc" target="_blank" rel="noopener noreferrer me"
+    <a href="https://github.com/ggcso" target="_blank" rel="noopener noreferrer me"
         title="View Us on Github">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
     stroke-linecap="round" stroke-linejoin="round">
