--- a/zh/404.html
+++ b/zh/404.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Guangdong Gaozhou Senior High School Computer Society Official">
 <meta name="author" content="Guangdong Gaozhou Senior High School Computer Society">
 <link rel="canonical" href="https://ggcso.github.io/zh/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.4599eadb9eb2ad3d0a8d6827b41a8fda8f2f4af226b63466c09c5fddbc8706b7.css" integrity="sha256-RZnq256yrT0KjWgntBqP2o8vSvImtjRmwJxf3byHBrc=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://ggcso.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://ggcso.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://ggcso.github.io/favicon-32x32.png">
