--- a/zh/search/index.html
+++ b/zh/search/index.html
@@ -10,8 +10,8 @@
 <meta name="description" content="搜索 - 广东高州中学电脑协会官方网站">
 <meta name="author" content="Guangdong Gaozhou Senior High School Computer Society">
 <link rel="canonical" href="https://ggcso.github.io/zh/search/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.4599eadb9eb2ad3d0a8d6827b41a8fda8f2f4af226b63466c09c5fddbc8706b7.css" integrity="sha256-RZnq256yrT0KjWgntBqP2o8vSvImtjRmwJxf3byHBrc=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
-<script defer crossorigin="anonymous" src="/assets/js/search.d1362ec293cf71afa4ec91a3127b0e980d0376c9ae5046ec08f7b326b3f62e50.js" integrity="sha256-0TYuwpPPca&#43;k7JGjEnsOmA0DdsmuUEbsCPezJrP2LlA="></script>
+<link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
+<script defer crossorigin="anonymous" src="/assets/js/search.js"></script>
 <link rel="icon" href="https://ggcso.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://ggcso.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://ggcso.github.io/favicon-32x32.png">
